--- a/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
+++ b/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
@@ -4,10 +4,9 @@ title: Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Develop
 author: "Shirley J. Ho and Sushanta K. Mallick"
 date: "December, 2016"
 output:
-  pdf_document: default
-  latex_engine: xelatex
+  pdf_document: 
+    latex_engine: xelatex
 bibliography: does_reference.bib
-
 ---
 
 ## Abstract
@@ -22,7 +21,7 @@ It is reported that ¡¥38% of adults in the world do not use formal financial ser
 
 For either of the two approaches, the credibility of MFIs is the key for the mechanism to work. Unfortunately, frauds may occur in microfinance institutions (MFIs) as it can happen in any other type of company, organization or government institution in countries where there are weak institutions, weak rule of law, and fraudulent behavior of MFI officers for personal gain. There are increasing reports that local nongovernment (NGO) MFIs subcontracted by a multi-million-dollar microfinance program are taking bribes from borrowers.^[See http://www.speroforum.com/a/17580/Microfinance-industry-breeds-corruption.] As documented on the microfinance gateway site (http://www.microfinancegateway.org/) of CGAP (World Bank), there have been investor concerns about corruption in MFIs. While there are increasing calls to launch financial governance on these NGO MFIs, many would worry whether frauds of this nature can damage MFIs¡¦ contributions to the credit market, particularly in the bank-linkage program where the NGO MFIs act as third party intermediary to reveal information about the borrower [see @Bose1998]. In a recent empirical study, @Al-Azzam2016 provide evidence that microcredit interest rates respond positively to corruption. The study reports asymmetry in this relationship in the sense that while corruption has a positive and significant impact on interest rates of unregulated MFIs, it has a negligible impact on interest rates of regulated MFIs. Therefore, it is possible that countries with better regulation of MFIs can have low incidence of bribery as in @Dechenaux2014.
 
-Using a sample of 832 MFIs from 74 countries for the period 2003¡V2011, @Sainz-Fernandez2015 identify different internal and external factors for crises in microfinance institutions. They find that countries with high levels of corruption can create disincentives for customers to pay back loans and thereby MFI failure, as the control of corruption variable has a positive and insignificant coefficient with the mean value of control of corruption for these 74 countries staying at ???0.556 (when the indicator ranges from ???2.5 to 2.5 ¡V from high to low corruption). Using the same variable (mean value of ???0.58), @Ahlin2011 find that corruption acts as a barrier to start-up microenterprise growth, although not to subsequent extensive MFI growth. There is therefore sufficient anecdotal and rigorous empirical evidence to motivate our analysis that there are common types of fraudulent practices by MFI officers for private gain in countries where there are weak rule of law and poor quality institutions as reflected in the control of corruption index used in these studies. In section 'No linkage', in the context of India, we show that banks and financial institutions were entering the microfinance market in increasing numbers until 2008¡V2009 (see Figure 4). Since then, the linkage program has stabilized possibly showing cases of bad practices, partly supporting the evidence in @Sainz-Fernandez2015 and anecdotal evidence in @Lahkar2016. Nevertheless, getting MFIs to coordinate with self-help groups (SHGs) is important in order to establish a robust linkage with mainstream commercial banks and make the bank-MFI linkage sustainable. As the number of SHGs has declined since 2009 as shown in section 'Related Evidence on Microfinance Activity', this does reflect the possible impact of frauds or failure of some SHGs.
+Using a sample of 832 MFIs from 74 countries for the period 2003¡V2011, @Sainz-Fernandez2015 identify different internal and external factors for crises in microfinance institutions. They find that countries with high levels of corruption can create disincentives for customers to pay back loans and thereby MFI failure, as the control of corruption variable has a positive and insignificant coefficient with the mean value of control of corruption for these 74 countries staying at $-0.556$ (when the indicator ranges from $-2.5$ to 2.5 ¡V from high to low corruption). Using the same variable (mean value of $-0.58$), @Ahlin2011 find that corruption acts as a barrier to start-up microenterprise growth, although not to subsequent extensive MFI growth. There is therefore sufficient anecdotal and rigorous empirical evidence to motivate our analysis that there are common types of fraudulent practices by MFI officers for private gain in countries where there are weak rule of law and poor quality institutions as reflected in the control of corruption index used in these studies. In section 'No linkage', in the context of India, we show that banks and financial institutions were entering the microfinance market in increasing numbers until 2008¡V2009 (see Figure 4). Since then, the linkage program has stabilized possibly showing cases of bad practices, partly supporting the evidence in @Sainz-Fernandez2015 and anecdotal evidence in @Lahkar2016. Nevertheless, getting MFIs to coordinate with self-help groups (SHGs) is important in order to establish a robust linkage with mainstream commercial banks and make the bank-MFI linkage sustainable. As the number of SHGs has declined since 2009 as shown in section 'Related Evidence on Microfinance Activity', this does reflect the possible impact of frauds or failure of some SHGs.
 
 The purpose of this study is to analyze the collusion decisions faced by MFIs and the impacts on the bank-linkage program as a solution to mitigate the information problems in the credit market. Our results show that even when there is a chance of collusion between MFI and the borrower, the linkage between MFI and bank can still increase the probability that the borrower puts in full effort, and therefore decreases the probabilities of both credit rationing and strategic default.
 
@@ -50,19 +49,71 @@ Throughout this paper, we characterize the Bayesian equilibria for the model. We
 
 We first demonstrate the existence of credit rationing and strategic default problems in a situation where there is no linkage between MFI and commercial bank. Later we show how a linkage between MFI and the bank can mitigate these problems, even if there is collusion between MFI and the borrower.
 
-Consider an indivisible project which needs an external funding of size $L$. The rate of return for this project is assumed to be uncertain and determined by the borrower's effort. Specifically, denote $e \epsilon \left \{ 0,e_{H} \right \}$ with $0< e_{H}$, as the borrower's effort decision,3 and $R$ as the project's rate of return, which is a function of the borrower's effort. If $e = 0$, then $R = 0$ for sure; If $e = e_{H}$, then the rate of return on the borrower's project follows a nondecreasing distribution $F\left ( e_{H}, R \right )$ over $\left ( - \infty ,\infty \right )$, with math formula being the density function.
+Consider an indivisible project which needs an external funding of size $L$. The rate of return for this project is assumed to be uncertain and determined by the borrower's effort. Specifically, denote $e \epsilon \left \{ 0,e_{H} \right \}$ with $0 < e_{H}$, as the borrower's effort decision,^[The binary effort is assumed to simplify MFI's collusion decision. More general assumption of continuous effort only changes $£l$ from a constant to a distribution.] and $R$ as the project's rate of return, which is a function of the borrower's effort. If $e = 0$, then $R = 0$ for sure; If $e = e_{H}$, then the rate of return on the borrower's project follows a nondecreasing distribution $F\left ( e_{H}, R \right )$ over $\left ( - \infty ,\infty \right )$, with $f\left ( e,R \right )$ being the density function.
 
 We assume that there is asymmetric information between commercial bank and the borrower. That is, let $ce$ be the borrower's effort cost. The bank cannot observe the marginal cost $c$, but has a belief that c follows a uniform distribution over $\left [ 0,\bar{c} \right ]$, with $\bar{c} > e_{H}$. Under incomplete information, the commercial bank needs to decide whether to give a loan $L$ to the borrower. If the borrower is given this loan, she needs to decide whether to put in full effort $e_{H}$ or not. After the effort decision, the project return realizes and becomes publicly known.
 
 ### Bank's loan decision
 
-The commercial bank will lend out **L** if the expected gain of lending is greater than the expected loss. That is, let $£l$ with $0 < £l < 1$ denote the bank's belief that the borrower will put in full effort $e_{H}$. We will later explain how this belief is determined by the bank's belief on the borrower's marginal cost of effort and the borrower's effort decision. Denote $r^{c}$ as the prevailing competitive interest rate.^[Due to competition, commercial banks usually charge a competitive interest rate, which is part of the reason why the bank cannot offer a loan contract with properly designed interest rates to screen the borrowers.] The expected *gain* for lending $L$ is:
+The commercial bank will lend out **L** if the expected gain of lending is greater than the expected loss. That is, let $\rho$ with $0 < \rho  < 1$ denote the bank's belief that the borrower will put in full effort $e_{H}$. We will later explain how this belief is determined by the bank's belief on the borrower's marginal cost of effort and the borrower's effort decision. Denote $r^{c}$ as the prevailing competitive interest rate.^[Due to competition, commercial banks usually charge a competitive interest rate, which is part of the reason why the bank cannot offer a loan contract with properly designed interest rates to screen the borrowers.] The expected *gain* for lending $L$ is:
 
-$$\rho L [ \int_{1}^{\left ( 1 + r^{c} \right )} \left ( R-1 \right )f\left ( e_{H},R \right )dR + r^{c} \int_{1 + r^{c}}^{\infty } f\left ( e_{H}, R\right )dR  ].$$
+$$ \rho L [ \int_{1}^{\left ( 1 + r^{c} \right )} \left ( R-1 \right )f\left ( e_{H},R \right )dR + r^{c} \int_{1 + r^{c}}^{\infty } f\left ( e_{H}, R\right )dR  ]. $$
 
-The expected gain occurs only when the borrower puts in full effort, the probability of which is $£l$.
+The expected gain occurs only when the borrower puts in full effort, the probability of which is $\rho$. However, even if the full effort has been put in, the rate of return is uncertain, so there are only two possibilities to have positive payoff. First, when the rate of return is greater than $\left(1+r^{c}\right)$, the bank can receive the interest of $r^{c}$. The probability for $R  \geq \left(1+r^{c}\right)$ is $\int_{1+r^{c}}^{\infty } f\left ( e_{H},R \right )dR$, as in the second term of equation (1). Notice that this probability can be rewritten as $1 - F\left ( e_{H},1+r^{c} \right )$. Second, when the rate of return is not high enough for full repayment (i.e. $L + r^{c}L$), the bank will take whatever it can. That is, for $1 \leq  R < 1 + r^{c}$, the gain will be $(R - 1)L$.
+
+The expected *loss* for lending $L$ is:
 
 
 
+![Credit rationing and strategic default without a linkage. [Colour figure can be viewed at wileyonlinelibrary.com]](figure1.png)
+
+![Borrower's decisions with a linkage. [Colour figure can be viewed at wileyonlinelibrary.com]](figure2.png)
+
+![Credit rationing and strategic default with a linkage. [Colour figure can be viewed at wileyonlinelibrary.com]](figure3.png)
+
+![Self-help group bank-linkage program in India. [Colour figure can be viewed at wileyonlinelibrary.com]. Source: NABARD (compiled from RBI Handbook of Statistics on the Indian Economy). Notes: Data during the year relate to Commercial Banks, RRBs and Co-operative Banks.](figure4.png)
+
+
+
+
+
+Table 1. Mistakes of the government's official priority selector policies
+
+|      |       |       | Regional rural banks (gramin banks) in India |
+|:----:|:-----:|:-----:|:--------------------------------------------:|
+|      |  APS  |  LPS  |               Profit (INR bin)               |
+| 1992 | 0.423 | 0.913 |                    -2.465                    |
+| 1993 | 0.406 | 0.894 |                    -3.105                    |
+| 1994 | 0.368 | 0.877 |                    -3.686                    |
+| 1995 | 0.346 | 0.859 |                    -3.980                    |
+| 1996 | 0.307 | 0.824 |                    -4.512                    |
+| 1997 | 0.258 | 0.794 |                    -8.025                    |
+| 1998 | 0.240 | 0.784 |                     0.708                    |
+| 1999 | 0.228 | 0.773 |                     2.197                    |
+| 2000 | 0.224 | 0.762 |                     4.284                    |
+| 2001 | 0.223 | 0.734 |                     6.005                    |
+
+APS ¡V ratio of the priority sector loans to total assets.
+LPS ¡V ratio of the priority sector loans to total loans.
+INR bin: billions in Indian rubee.
+Source: RBI.
+
+The microfinance revolution of the 1990s sparked a major debate between the poverty oriented^[See @Johnson1997, @Buckley1997 and @Hollis1998.] lending, reflecting distributive role of credit policy and the financial systems approach promoting greater financial innovation. The importance of MFIs in poverty reduction is now well documented, but how can we do better? Direct subsidies or donations to MFIs in the form of grants are currently seen in many countries, but the massive aid has not delivered the expected results [@Padmanabhan2001], as many micro enterprises as part of larger aid and development projects, have turned unviable, making the MFIs donor-dependent.^[See www.themix.org that gives details of 150 MFI's all nearly viable, but 11,000 others may disappear when subsidies are eliminated. These people will have all the hang-ups of dealing with subsidized institutions and no institutions then will be willing to go near them.] Subsidization in many instances takes the form of cheap loans and when the funds for this dry up, the institution is not in a position to carry on. Also microcredit interest rates are high because micro lending remains a high-cost operation. The key to reducing these rates in a sustainable manner is to reduce costs through improved market competition, innovation, and efficiency. On the other hand, commercial banks are also unwilling to serve the unbanked (low-income earners, micro-entrepreneurs and the poor) due to high costs involved for small loans.
+
+Recently, there has been a shift in the focus of MFIs toward commercialization or profitability as a result of international donor pressure to achieve large-scale operations and financial sustainability. This is the very discernible direction for MFI as pushed by the CGAP, emphasizing on market reform, careful regulation and monitoring, and the development of various other products and services such as deposit taking ¡V a move from traditional micro lending to financial services in the broader sense (see @Drake2002). Besides, as mentioned earlier, there is some evidence that commercial banks are cautiously venturing into this market through some form of a linkage program.
+
+Following this thinking, our paper has developed a market-oriented approach of a linkage between banks and MFIs lending decisions, which can provide the necessary scale and outreach in order to overcome the sustainability challenge facing the MFIs and thus can help achieve greater inclusiveness and alleviate poverty. If the MFIs can graduate their creditworthy borrowers to the formal bank, these borrowers can get access to a bigger loan amount to expand their business. The formal financial sector is predominantly urban-based, and tends to be out of reach of peasant farmers, small-scale entrepreneurs and ordinary households, so the microfinance sector, Bangladesh being a glaring example, fills the gap in the market. Since the formal sector for providing productive credit has found it less attractive to enter this sector because of fears over default risk, strengthening credit delivery mechanisms is important with special focus on the promotion of micro-credit ventures in the credit delivery that can aid both borrower selection and project implementation. Unlike many other developing countries, in India the policy environment as well as the institutional structure required to serve the needs of the rural people already exists and seems to offer favorable conditions for providing credit to the poor.^[See @Premchander2003 for the institutional arrangements with regard to agriculture and rural credit.]
+
+Funding for MFIs comes primarily from governments and international development organizations including the World Bank and regional development banks, and MFI related agencies or donors. There is anecdotal evidence in the media reports that local NGOs subcontracted by a donor-funded microfinance program are taking bribes from borrowers. This type of corrupt practices suggests that subsidized credit or donor-funded micro-credit expansion may not be the way forward for financial deepening and future development in the disadvantaged local economies. Directing financial services to micro-entrepreneurs therefore requires sustainable rural financial systems ideally being market-based. In the case of India, apart from directed lending through priority sector advances, many commercial banks have come forward to support innovative microfinance schemes [@Ghosh2000]. Thus, there is a need to balance microfinance-oriented market-strengthening policies with institutional initiatives to reduce dependence on subsidized or donor-funded microcredit.
+
+## 4 Concluding Remarks
+
+Despite the success of microfinance that hinges on group lending ¡V which has been profitable for MFIs and beneficial particularly for the rural poor, there are increasing reports that local NGO MFIs subcontracted by a multi-million-dollar microfinance programs are taking bribes from the borrowers. While there are increasing calls to launch financial governance on these NGO MFIs, many would worry whether collusion of this nature can damage MFIs¡¦ contributions to the credit market, particularly in the bank-linkage program where the NGO MFIs act as third party intermediary. Our study analyzed the collusion decisions faced by MFIs and the impact on the bank-linkage program, which acts as a solution to address the information problems in the credit market. Our results show that in a linkage between MFI and bank, even when there is a possibility of collusion between MFI and the borrower, the probability that the borrower puts in full effort will increase, and both the probabilities of credit rationing and strategic default will decrease.
+
+In the light of the potential for growth in the rural sector, micro-financing can be more effective in achieving inclusive financial development and thereby poverty reduction, if commercial banks become inclined to channel their asset portfolio in financing viable projects in rural areas via the MFIs in the loan approval and monitoring process ¡V a link developed in this paper between formal banks and the rural borrower. This will strengthen the already existing evidence that access to microfinance contributes to poverty reduction (see @Khandker2005). The banking system is still out of reach for the poor as they cannot bribe a loan officer or provide collateral that the banks need in order to provide them with a loan. Thus, MFIs can act as an intermediary in a bank-linkage program that would allow the poor to access credit market and reduce their poverty on the one hand and to achieve an overall financial sector development on the other. The productive economic activities in the rural areas should be the determining factor for credit allocation. Change in government priorities to enable commercializing rural financial markets can thus help remove the financing constraints facing the micro-entrepreneurs and small-businesses, and thereby provide a direct link between financial development and poverty reduction.
+
+## Acknowledgements
+
+We gratefully acknowledge the constructive comments made by two anonymous referees and the editor of this journal. Thanks are due to Huw Edwards, Ayse Evrensel, T. Krishna Kumar, and Garrett Wyse for their comments on an earlier version of this paper. The usual caveat applies. The first author acknowledges financial support from the Ministry of Science and Technology, Taiwan, NSC 100-2410-H-004-022.
 
 ## References
